tests/miniJava/pos/001075_cdrc2.MiniJava
class java { public static void Main ( String [ ] java ) { if ( true ) java [ 0 ] = 0 ; else System.out.println ( { } ) ; } }
