tests/miniJava/neg/001280_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { java = new int else 0 ] ; } }
